crates/core/tests/compile_fail/unknown_variant_attr.rs
use sutures::Seam;

#[derive(Seam)]
enum Bad {
    #[seam(bogus)]
    A,
}

fn main() {}
