crates/core/tests/compile_fail/unknown_variant_attr.stderr
error: unknown seam variant attribute
 --> tests/compile_fail/unknown_variant_attr.rs:5:12
  |
5 |     #[seam(bogus)]
  |            ^^^^^
